lustre/mdt/mdt_internal.h
@@ -258,7 +258,7 @@ struct mdt_reint_record {
 };
 
 enum mdt_reint_flag {
-        MRF_SETATTR_LOCKED = 1 << 0,
+        MRF_OPEN_TRUNC = 1 << 0,
 };
 
 /*
